# hex-rl

./: .gitignore  README.md  pyproject.toml
alpha-zero/: buffer.py  config.py  env.py  eval.py  mcts.py  model.py  self_play.py  train.py
app/: docker-compose.yml
app/be/: .dockerignore  .gitignore  Dockerfile  main.py  requirements.txt
app/be/models/: bots.py
app/be/models/core/: mcts.py  policy_net.py  utils.py
app/fe/: Dockerfile  nginx.conf  package-lock.json  package.json
app/fe/src/: App.tsx
eval/: gen_eval.py  mcts.py  policy_net.py  utils.py
eval/weights/: ppo.pt  ppo_alphazero.pt
hex-ppo/: buffer.py  config.py  env.py  eval.py  model.py  ppo.py  rollout.py  train.py
